config: ajusta propriedade do Hibernate ORM para conexão com o banco de dados.

--- a/call-for-papers/src/main/resources/application.properties
+++ b/call-for-papers/src/main/resources/application.properties
@@ -2,4 +2,5 @@ quarkus.datasource.db-kind= postgresql
 quarkus.datasource.username= postgres
 quarkus.datasource.password= Leao2004
 quarkus.datasource.jdbc.url= jdbc:postgresql://localhost:5434/callforpaperdb
+quarkus.hibernate-orm.database.generation= update
 
