--- a/call-for-papers/src/main/resources/application.properties
+++ b/call-for-papers/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.datasource.db-kind= postgresql
 quarkus.datasource.username= postgres
 quarkus.datasource.password= yVpWgEdzBaUGopxJDulXrBvVzmrOlPLV
-quarkus.datasource.jdbc.url= postgresql://postgres:yVpWgEdzBaUGopxJDulXrBvVzmrOlPLV@postgres.railway.internal:5432/railway
+quarkus.datasource.jdbc.url= jdbc:postgresql://postgres:yVpWgEdzBaUGopxJDulXrBvVzmrOlPLV@postgres.railway.internal:5432/railway
 quarkus.hibernate-orm.database.generation= update
 
