--- a/call-for-papers/pom.xml
+++ b/call-for-papers/pom.xml
@@ -69,7 +69,11 @@
             <artifactId>quarkus-junit5</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-vertx-web</artifactId>
+            <version>3.0.0.Beta1</version>
+        </dependency>
     </dependencies>
 
     <build>
