--- a/call-for-papers/src/main/resources/application.properties
+++ b/call-for-papers/src/main/resources/application.properties
@@ -4,3 +4,8 @@ quarkus.datasource.password= yVpWgEdzBaUGopxJDulXrBvVzmrOlPLV
 quarkus.datasource.jdbc.url= jdbc:postgresql://postgres.railway.internal:5432/railway
 quarkus.hibernate-orm.database.generation= update
 
+quarkus.http.cors=true
+quarkus.http.cors.origins=https://react-js-desafio-cfp-client.vercel.app/
+quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
+quarkus.http.cors.headers=Accept, Content-Type, Authorization
+quarkus.http.cors.exposed-headers=Authorization
