--- a/call-for-papers/src/main/resources/application.properties
+++ b/call-for-papers/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.datasource.db-kind= postgresql
-quarkus.datasource.username= ${{PGUSER}}
-quarkus.datasource.password= ${{POSTGRES_PASSWORD}}
-quarkus.datasource.jdbc.url= jdbc:postgresql://postgres.railway.internal:5432/railway
+quarkus.datasource.username= ${PG USER}
+quarkus.datasource.password= ${POSTGRES_PASSWORD}
+quarkus.datasource.jdbc.url= jdbc:postgresql://${GHOST}:${PORT}/${DATABASE}
 quarkus.hibernate-orm.database.generation= update
