--- a/call-for-papers/src/main/resources/application.properties
+++ b/call-for-papers/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${PGUSER}
 quarkus.datasource.password=${POSTGRES_PASSWORD}
-quarkus.datasource.jdbc.url= postgresql://${PGHOST}:${PGPORT}/${POSTGRES_DB}
+quarkus.datasource.jdbc.url=jdbc:${DATABASE_PUBLIC_URL}
 quarkus.hibernate-orm.database.generation=update
