config: ajustes nas configurações de dependências para os testes auto.

--- a/call-for-papers/src/main/resources/application.properties
+++ b/call-for-papers/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
-quarkus.datasource.password=yVpWgEdzBaUGopxJDulXrBvVzmrOlPLV
-quarkus.datasource.jdbc.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+quarkus.datasource.password=Leao2004
+quarkus.datasource.jdbc.url= jdbc:postgresql://localhost:5434/callforpaperdb
 quarkus.hibernate-orm.database.generation=update
+
+# Configuração do H2 para os testes
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+%test.quarkus.datasource.username=sa
+%test.quarkus.datasource.password=password
+%test.quarkus.hibernate-orm.database.generation=update
+%test.quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
+%test.quarkus.h2.console.enabled=true
