--- a/call-for-papers/pom.xml
+++ b/call-for-papers/pom.xml
@@ -74,6 +74,17 @@
             <artifactId>quarkus-vertx-web</artifactId>
             <version>3.0.0.Beta1</version>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-h2</artifactId>
+            <version>3.19.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-validator</artifactId>
+            <version>3.19.4</version>
+        </dependency>
     </dependencies>
 
     <build>
