--- a/call-for-papers/src/main/resources/application.properties
+++ b/call-for-papers/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
-quarkus.datasource.password=Leao2004
-quarkus.datasource.jdbc.url= jdbc:postgresql://localhost:5434/callforpaperdb
+quarkus.datasource.password=yVpWgEdzBaUGopxJDulXrBvVzmrOlPLV
+quarkus.datasource.jdbc.url=jdbc:postgresql://postgres.railway.internal:5432/railway
 quarkus.hibernate-orm.database.generation=update
 
 # Configuração do H2 para os testes
