feat(auth): implementação de autenticação via magic link com JWT
- Backend gera token JWT e envia por e-mail como link de autenticação
- Usuário é autenticado ao acessar o link (token é validado pelo backend)
- Uso das tecnologias:
  - Quarkus Mailer (envio do link por e-mail)
  - Quarkus JWT (geração e validação do token)

--- a/call-for-papers/src/main/resources/application.properties
+++ b/call-for-papers/src/main/resources/application.properties
@@ -12,3 +12,32 @@ quarkus.hibernate-orm.database.generation=update
 %test.quarkus.hibernate-orm.database.generation=update
 %test.quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 %test.quarkus.h2.console.enabled=true
+
+#TODO: implementar RSA, modelos de chaves mais robusto para produção
+# JWT com assinatura RSA (.pem)
+mp.jwt.verify.publickey.location=META-INF/publicKey.pem
+smallrye.jwt.sign.key.location=META-INF/privateKey.pem
+mp.jwt.verify.issuer=call-for-papers
+quarkus.native.resources.includes=META-INF/publicKey.pem,META-INF/privateKey.pem
+
+
+# === QUARKUS MAILER (envio do magic link) ===
+quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
+quarkus.mailer.from=phedrohenrickdasilva@gmail.com
+quarkus.mailer.host=smtp.gmail.com
+quarkus.mailer.port=587
+quarkus.mailer.start-tls=REQUIRED
+quarkus.mailer.username=phedrohenrickdasilva@gmail.com
+quarkus.mailer.password=bnqdyivvhfhsvnwz
+#In dev mode, prevent from using the mock SMTP server
+quarkus.mailer.mock=false 
+
+
+quarkus.http.auth.permission.authenticated.paths=/api/papers/*
+quarkus.http.auth.permission.authenticated.policy=authenticated
+quarkus.http.auth.permission.public.paths=/api/auth/*
+quarkus.http.auth.permission.public.policy=permit
+
+
+
+
